infra/warpgate/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: warpgate
  name: warpgate
  namespace: warpgate
spec:
  replicas: 1
  selector:
    matchLabels:
      app: warpgate
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: warpgate
    spec:
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: data
      - name: config
        secret:
          secretName: warpgate-config
      - name: tmp
        emptyDir: {}
      containers:
      - image: ghcr.io/warp-tech/warpgate
        name: warpgate
        command:
          - warpgate
          - --config
          - /etc/warpgate/warpgate.yaml
          - run
        volumeMounts:
          - name: data
            mountPath: /data
          - name: tmp
            mountPath: /etc/warpgate
