infra/warpgate/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: warpgate
  name: warpgate
spec:
  type: LoadBalancer
  ports:
  - name: ssh
    protocol: TCP
    port: 2222
  - name: admin
    protocol: TCP
    port: 443
  selector:
    app: warpgate
